--- a/frontend/userMessagesApp/src/styles/Menu.css
+++ b/frontend/userMessagesApp/src/styles/Menu.css
@@ -1,24 +1,29 @@
 .menu {
 	position: absolute;
+	top: 50%;
+	left: 50%;
 	opacity: 0;
 	border-radius: 4px;
 	background-color: #ffffff;
 	box-shadow: 0 3px 5px 1px var(--hover-color);
 	transition: opacity 200ms ease-in-out;
-	font-family: var(--primary-font);
+	user-select: none;
+	pointer-events: none;
 }
 
 .menu.show-menu {
 	opacity: 1;
+	user-select: auto;
+	pointer-events: all;
 }
 
 .menu-list {
-	padding: 8px 0px;
+	padding-block: 0.5em;
 	list-style: none;
 }
 
 .menu-item {
-	padding: 4px 16px;
+	padding: 0.25em 1em;
 }
 
 .menu-item:hover {
